NEX-56 Update pipeline for running tests

--- a/jest-stare/index.html
+++ b/jest-stare/index.html
@@ -119,19 +119,20 @@
         <div class="d-none" id="test-summary"></div>
         <div class="d-none" id="test-config">{
   &quot;additionalResultsProcessors&quot;: [],
+  &quot;log&quot;: false,
   &quot;resultDir&quot;: &quot;.&#x2F;jest-stare&#x2F;&quot;,
   &quot;resultHtml&quot;: &quot;index.html&quot;,
   &quot;resultJson&quot;: &quot;jest-results.json&quot;
 }</div>
         <div id="accordion">
             <div class="d-none" id="test-results">{
-  &quot;numFailedTestSuites&quot;: 5,
+  &quot;numFailedTestSuites&quot;: 0,
   &quot;numFailedTests&quot;: 0,
   &quot;numPassedTestSuites&quot;: 0,
   &quot;numPassedTests&quot;: 0,
   &quot;numPendingTestSuites&quot;: 0,
   &quot;numPendingTests&quot;: 0,
-  &quot;numRuntimeErrorTestSuites&quot;: 5,
+  &quot;numRuntimeErrorTestSuites&quot;: 0,
   &quot;numTodoTests&quot;: 0,
   &quot;numTotalTestSuites&quot;: 5,
   &quot;numTotalTests&quot;: 0,
@@ -152,162 +153,9 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1732036008663,
+  &quot;startTime&quot;: 1732036218347,
   &quot;success&quot;: false,
-  &quot;testResults&quot;: [
-    {
-      &quot;failureMessage&quot;: &quot;  \u001b[1m● \u001b[22mTest suite failed to run\n\n    Your test suite must contain at least one test.\n\n      \u001b[2mat onResult (\u001b[22m..&#x2F;node_modules&#x2F;@jest&#x2F;core&#x2F;build&#x2F;TestScheduler.js\u001b[2m:133:18)\u001b[22m\n      \u001b[2mat \u001b[22m..&#x2F;node_modules&#x2F;@jest&#x2F;core&#x2F;build&#x2F;TestScheduler.js\u001b[2m:254:19\u001b[22m\n      \u001b[2mat \u001b[22m..&#x2F;node_modules&#x2F;emittery&#x2F;index.js\u001b[2m:363:13\u001b[22m\n          at Array.map (&lt;anonymous&gt;)\n      \u001b[2mat Emittery.emit (\u001b[22m..&#x2F;node_modules&#x2F;emittery&#x2F;index.js\u001b[2m:361:23)\u001b[22m\n&quot;,
-      &quot;leaks&quot;: false,
-      &quot;numFailingTests&quot;: 0,
-      &quot;numPassingTests&quot;: 0,
-      &quot;numPendingTests&quot;: 0,
-      &quot;numTodoTests&quot;: 0,
-      &quot;openHandles&quot;: [],
-      &quot;perfStats&quot;: {
-        &quot;end&quot;: 0,
-        &quot;runtime&quot;: 0,
-        &quot;slow&quot;: false,
-        &quot;start&quot;: 0
-      },
-      &quot;skipped&quot;: false,
-      &quot;snapshot&quot;: {
-        &quot;added&quot;: 0,
-        &quot;fileDeleted&quot;: false,
-        &quot;matched&quot;: 0,
-        &quot;unchecked&quot;: 0,
-        &quot;uncheckedKeys&quot;: [],
-        &quot;unmatched&quot;: 0,
-        &quot;updated&quot;: 0
-      },
-      &quot;testExecError&quot;: {
-        &quot;message&quot;: &quot;Your test suite must contain at least one test.&quot;,
-        &quot;stack&quot;: &quot;Error: Your test suite must contain at least one test.\n    at onResult (C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\@jest\\core\\build\\TestScheduler.js:133:18)\n    at C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\@jest\\core\\build\\TestScheduler.js:254:19\n    at C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\emittery\\index.js:363:13\n    at Array.map (&lt;anonymous&gt;)\n    at Emittery.emit (C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\emittery\\index.js:361:23)\n    at process.processTicksAndRejections (node:internal&#x2F;process&#x2F;task_queues:95:5)&quot;
-      },
-      &quot;testFilePath&quot;: &quot;C:\\Users\\Youcode\\Desktop\\Nexus-api\\src\\tests\\integration\\message.integration.spec.ts&quot;,
-      &quot;testResults&quot;: []
-    },
-    {
-      &quot;failureMessage&quot;: &quot;  \u001b[1m● \u001b[22mTest suite failed to run\n\n    Your test suite must contain at least one test.\n\n      \u001b[2mat onResult (\u001b[22m..&#x2F;node_modules&#x2F;@jest&#x2F;core&#x2F;build&#x2F;TestScheduler.js\u001b[2m:133:18)\u001b[22m\n      \u001b[2mat \u001b[22m..&#x2F;node_modules&#x2F;@jest&#x2F;core&#x2F;build&#x2F;TestScheduler.js\u001b[2m:254:19\u001b[22m\n      \u001b[2mat \u001b[22m..&#x2F;node_modules&#x2F;emittery&#x2F;index.js\u001b[2m:363:13\u001b[22m\n          at Array.map (&lt;anonymous&gt;)\n      \u001b[2mat Emittery.emit (\u001b[22m..&#x2F;node_modules&#x2F;emittery&#x2F;index.js\u001b[2m:361:23)\u001b[22m\n&quot;,
-      &quot;leaks&quot;: false,
-      &quot;numFailingTests&quot;: 0,
-      &quot;numPassingTests&quot;: 0,
-      &quot;numPendingTests&quot;: 0,
-      &quot;numTodoTests&quot;: 0,
-      &quot;openHandles&quot;: [],
-      &quot;perfStats&quot;: {
-        &quot;end&quot;: 0,
-        &quot;runtime&quot;: 0,
-        &quot;slow&quot;: false,
-        &quot;start&quot;: 0
-      },
-      &quot;skipped&quot;: false,
-      &quot;snapshot&quot;: {
-        &quot;added&quot;: 0,
-        &quot;fileDeleted&quot;: false,
-        &quot;matched&quot;: 0,
-        &quot;unchecked&quot;: 0,
-        &quot;uncheckedKeys&quot;: [],
-        &quot;unmatched&quot;: 0,
-        &quot;updated&quot;: 0
-      },
-      &quot;testExecError&quot;: {
-        &quot;message&quot;: &quot;Your test suite must contain at least one test.&quot;,
-        &quot;stack&quot;: &quot;Error: Your test suite must contain at least one test.\n    at onResult (C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\@jest\\core\\build\\TestScheduler.js:133:18)\n    at C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\@jest\\core\\build\\TestScheduler.js:254:19\n    at C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\emittery\\index.js:363:13\n    at Array.map (&lt;anonymous&gt;)\n    at Emittery.emit (C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\emittery\\index.js:361:23)\n    at process.processTicksAndRejections (node:internal&#x2F;process&#x2F;task_queues:95:5)&quot;
-      },
-      &quot;testFilePath&quot;: &quot;C:\\Users\\Youcode\\Desktop\\Nexus-api\\src\\tests\\unit\\auth.service.spec.ts&quot;,
-      &quot;testResults&quot;: []
-    },
-    {
-      &quot;failureMessage&quot;: &quot;  \u001b[1m● \u001b[22mTest suite failed to run\n\n    Your test suite must contain at least one test.\n\n      \u001b[2mat onResult (\u001b[22m..&#x2F;node_modules&#x2F;@jest&#x2F;core&#x2F;build&#x2F;TestScheduler.js\u001b[2m:133:18)\u001b[22m\n      \u001b[2mat \u001b[22m..&#x2F;node_modules&#x2F;@jest&#x2F;core&#x2F;build&#x2F;TestScheduler.js\u001b[2m:254:19\u001b[22m\n      \u001b[2mat \u001b[22m..&#x2F;node_modules&#x2F;emittery&#x2F;index.js\u001b[2m:363:13\u001b[22m\n          at Array.map (&lt;anonymous&gt;)\n      \u001b[2mat Emittery.emit (\u001b[22m..&#x2F;node_modules&#x2F;emittery&#x2F;index.js\u001b[2m:361:23)\u001b[22m\n&quot;,
-      &quot;leaks&quot;: false,
-      &quot;numFailingTests&quot;: 0,
-      &quot;numPassingTests&quot;: 0,
-      &quot;numPendingTests&quot;: 0,
-      &quot;numTodoTests&quot;: 0,
-      &quot;openHandles&quot;: [],
-      &quot;perfStats&quot;: {
-        &quot;end&quot;: 0,
-        &quot;runtime&quot;: 0,
-        &quot;slow&quot;: false,
-        &quot;start&quot;: 0
-      },
-      &quot;skipped&quot;: false,
-      &quot;snapshot&quot;: {
-        &quot;added&quot;: 0,
-        &quot;fileDeleted&quot;: false,
-        &quot;matched&quot;: 0,
-        &quot;unchecked&quot;: 0,
-        &quot;uncheckedKeys&quot;: [],
-        &quot;unmatched&quot;: 0,
-        &quot;updated&quot;: 0
-      },
-      &quot;testExecError&quot;: {
-        &quot;message&quot;: &quot;Your test suite must contain at least one test.&quot;,
-        &quot;stack&quot;: &quot;Error: Your test suite must contain at least one test.\n    at onResult (C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\@jest\\core\\build\\TestScheduler.js:133:18)\n    at C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\@jest\\core\\build\\TestScheduler.js:254:19\n    at C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\emittery\\index.js:363:13\n    at Array.map (&lt;anonymous&gt;)\n    at Emittery.emit (C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\emittery\\index.js:361:23)\n    at process.processTicksAndRejections (node:internal&#x2F;process&#x2F;task_queues:95:5)&quot;
-      },
-      &quot;testFilePath&quot;: &quot;C:\\Users\\Youcode\\Desktop\\Nexus-api\\src\\tests\\unit\\message.service.spec.ts&quot;,
-      &quot;testResults&quot;: []
-    },
-    {
-      &quot;failureMessage&quot;: &quot;  \u001b[1m● \u001b[22mTest suite failed to run\n\n    Your test suite must contain at least one test.\n\n      \u001b[2mat onResult (\u001b[22m..&#x2F;node_modules&#x2F;@jest&#x2F;core&#x2F;build&#x2F;TestScheduler.js\u001b[2m:133:18)\u001b[22m\n      \u001b[2mat \u001b[22m..&#x2F;node_modules&#x2F;@jest&#x2F;core&#x2F;build&#x2F;TestScheduler.js\u001b[2m:254:19\u001b[22m\n      \u001b[2mat \u001b[22m..&#x2F;node_modules&#x2F;emittery&#x2F;index.js\u001b[2m:363:13\u001b[22m\n          at Array.map (&lt;anonymous&gt;)\n      \u001b[2mat Emittery.emit (\u001b[22m..&#x2F;node_modules&#x2F;emittery&#x2F;index.js\u001b[2m:361:23)\u001b[22m\n&quot;,
-      &quot;leaks&quot;: false,
-      &quot;numFailingTests&quot;: 0,
-      &quot;numPassingTests&quot;: 0,
-      &quot;numPendingTests&quot;: 0,
-      &quot;numTodoTests&quot;: 0,
-      &quot;openHandles&quot;: [],
-      &quot;perfStats&quot;: {
-        &quot;end&quot;: 0,
-        &quot;runtime&quot;: 0,
-        &quot;slow&quot;: false,
-        &quot;start&quot;: 0
-      },
-      &quot;skipped&quot;: false,
-      &quot;snapshot&quot;: {
-        &quot;added&quot;: 0,
-        &quot;fileDeleted&quot;: false,
-        &quot;matched&quot;: 0,
-        &quot;unchecked&quot;: 0,
-        &quot;uncheckedKeys&quot;: [],
-        &quot;unmatched&quot;: 0,
-        &quot;updated&quot;: 0
-      },
-      &quot;testExecError&quot;: {
-        &quot;message&quot;: &quot;Your test suite must contain at least one test.&quot;,
-        &quot;stack&quot;: &quot;Error: Your test suite must contain at least one test.\n    at onResult (C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\@jest\\core\\build\\TestScheduler.js:133:18)\n    at C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\@jest\\core\\build\\TestScheduler.js:254:19\n    at C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\emittery\\index.js:363:13\n    at Array.map (&lt;anonymous&gt;)\n    at Emittery.emit (C:\\Users\\Youcode\\Desktop\\Nexus-api\\node_modules\\emittery\\index.js:361:23)\n    at process.processTicksAndRejections (node:internal&#x2F;process&#x2F;task_queues:95:5)&quot;
-      },
-      &quot;testFilePath&quot;: &quot;C:\\Users\\Youcode\\Desktop\\Nexus-api\\src\\tests\\integration\\auth.integration.spec.ts&quot;,
-      &quot;testResults&quot;: []
-    },
-    {
-      &quot;failureMessage&quot;: &quot;  \u001b[1m● \u001b[22mTest suite failed to run\n\n    \u001b[96msrc&#x2F;tests&#x2F;unit&#x2F;app.controller.spec.ts\u001b[0m:\u001b[93m2\u001b[0m:\u001b[93m31\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS2307: \u001b[0mCannot find module &#39;.&#x2F;api&#x2F;app.controller&#39; or its corresponding type declarations.\n\n    \u001b[7m2\u001b[0m import { AppController } from &#39;.&#x2F;api&#x2F;app.controller&#39;;\n    \u001b[7m \u001b[0m \u001b[91m                              ~~~~~~~~~~~~~~~~~~~~~~\u001b[0m\n    \u001b[96msrc&#x2F;tests&#x2F;unit&#x2F;app.controller.spec.ts\u001b[0m:\u001b[93m3\u001b[0m:\u001b[93m28\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS2307: \u001b[0mCannot find module &#39;.&#x2F;app.service&#39; or its corresponding type declarations.\n\n    \u001b[7m3\u001b[0m import { AppService } from &#39;.&#x2F;app.service&#39;;\n    \u001b[7m \u001b[0m \u001b[91m                           ~~~~~~~~~~~~~~~\u001b[0m\n&quot;,
-      &quot;leaks&quot;: false,
-      &quot;numFailingTests&quot;: 0,
-      &quot;numPassingTests&quot;: 0,
-      &quot;numPendingTests&quot;: 0,
-      &quot;numTodoTests&quot;: 0,
-      &quot;openHandles&quot;: [],
-      &quot;perfStats&quot;: {
-        &quot;end&quot;: 0,
-        &quot;runtime&quot;: 0,
-        &quot;slow&quot;: false,
-        &quot;start&quot;: 0
-      },
-      &quot;skipped&quot;: false,
-      &quot;snapshot&quot;: {
-        &quot;added&quot;: 0,
-        &quot;fileDeleted&quot;: false,
-        &quot;matched&quot;: 0,
-        &quot;unchecked&quot;: 0,
-        &quot;uncheckedKeys&quot;: [],
-        &quot;unmatched&quot;: 0,
-        &quot;updated&quot;: 0
-      },
-      &quot;testExecError&quot;: &quot;\u001b[96msrc&#x2F;tests&#x2F;unit&#x2F;app.controller.spec.ts\u001b[0m:\u001b[93m2\u001b[0m:\u001b[93m31\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS2307: \u001b[0mCannot find module &#39;.&#x2F;api&#x2F;app.controller&#39; or its corresponding type declarations.\n\n\u001b[7m2\u001b[0m import { AppController } from &#39;.&#x2F;api&#x2F;app.controller&#39;;\n\u001b[7m \u001b[0m \u001b[91m                              ~~~~~~~~~~~~~~~~~~~~~~\u001b[0m\n\u001b[96msrc&#x2F;tests&#x2F;unit&#x2F;app.controller.spec.ts\u001b[0m:\u001b[93m3\u001b[0m:\u001b[93m28\u001b[0m - \u001b[91merror\u001b[0m\u001b[90m TS2307: \u001b[0mCannot find module &#39;.&#x2F;app.service&#39; or its corresponding type declarations.\n\n\u001b[7m3\u001b[0m import { AppService } from &#39;.&#x2F;app.service&#39;;\n\u001b[7m \u001b[0m \u001b[91m                           ~~~~~~~~~~~~~~~\u001b[0m&quot;,
-      &quot;testFilePath&quot;: &quot;C:\\Users\\Youcode\\Desktop\\Nexus-api\\src\\tests\\unit\\app.controller.spec.ts&quot;,
-      &quot;testResults&quot;: []
-    }
-  ],
+  &quot;testResults&quot;: [],
   &quot;wasInterrupted&quot;: false
 }</div>
         </div>
@@ -360,7 +208,7 @@
   ],
   &quot;rootDir&quot;: &quot;C:\\Users\\Youcode\\Desktop\\Nexus-api\\src&quot;,
   &quot;runTestsByPath&quot;: false,
-  &quot;seed&quot;: -1593420368,
+  &quot;seed&quot;: -931934148,
   &quot;skipFilter&quot;: false,
   &quot;snapshotFormat&quot;: {
     &quot;escapeString&quot;: false,
