NEX-56 Fix: Add jest.config.ts

--- a/jest-stare/index.html
+++ b/jest-stare/index.html
@@ -153,7 +153,7 @@
     &quot;unmatched&quot;: 0,
     &quot;updated&quot;: 0
   },
-  &quot;startTime&quot;: 1732036218347,
+  &quot;startTime&quot;: 1732037124207,
   &quot;success&quot;: false,
   &quot;testResults&quot;: [],
   &quot;wasInterrupted&quot;: false
@@ -163,11 +163,9 @@
   &quot;bail&quot;: 0,
   &quot;changedFilesWithAncestor&quot;: false,
   &quot;ci&quot;: true,
-  &quot;collectCoverage&quot;: false,
-  &quot;collectCoverageFrom&quot;: [
-    &quot;**&#x2F;*.(t|j)s&quot;
-  ],
-  &quot;coverageDirectory&quot;: &quot;C:\\Users\\Youcode\\Desktop\\Nexus-api\\coverage&quot;,
+  &quot;collectCoverage&quot;: true,
+  &quot;collectCoverageFrom&quot;: [],
+  &quot;coverageDirectory&quot;: &quot;C:\\Users\\Youcode\\Desktop\\Nexus-api\\src\\coverage&quot;,
   &quot;coverageProvider&quot;: &quot;babel&quot;,
   &quot;coverageReporters&quot;: [
     &quot;json&quot;,
@@ -208,7 +206,7 @@
   ],
   &quot;rootDir&quot;: &quot;C:\\Users\\Youcode\\Desktop\\Nexus-api\\src&quot;,
   &quot;runTestsByPath&quot;: false,
-  &quot;seed&quot;: -931934148,
+  &quot;seed&quot;: -23613223,
   &quot;skipFilter&quot;: false,
   &quot;snapshotFormat&quot;: {
     &quot;escapeString&quot;: false,
